[package]
name = "swell-build"
version = "0.1.0"
edition = "2021"
description = "SwellOS build system — builds .swell packages from source, generates repo.db"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
